@@ -5,6 +5,8 @@ plugins {
     id 'me.champeau.gradle.jmh' version '0.5.0'
 }
 
+version = "1.0.0"
+
 repositories {
     jcenter()
 }
@@ -35,6 +37,10 @@ tasks.withType(JavaCompile).each {
 test {
     jvmArgs(['--enable-preview'])
     useJUnitPlatform()
+}
+
+run {
+    jvmArgs(['--enable-preview'])
 }
 
 
